// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .cache-1hllovw-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked="true"]+.e1duuirp2 {
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid="true"]+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid="true"]:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid="true"]+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
  margin-top: 2px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="e1duuirp0 e1g1zfwd0 cache-1hllovw-StyledText-variantStyles-StyledRadioContainer"
    for="radio-choice"
  >
    <input
      aria-checked="false"
      aria-invalid="false"
      class="cache-1ihnbva-StyledRadio e1duuirp1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="e1duuirp2 etwatq50 cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
    Choice
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-1hllovw-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked="true"]+.e1duuirp2 {
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid="true"]+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid="true"]:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid="true"]+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
  margin-top: 2px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="e1duuirp0 e1g1zfwd0 cache-1hllovw-StyledText-variantStyles-StyledRadioContainer"
    for="radio-choice"
  >
    <input
      aria-checked="true"
      aria-invalid="false"
      checked=""
      class="cache-1ihnbva-StyledRadio e1duuirp1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="e1duuirp2 etwatq50 cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
      />
    </svg>
    Choice
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1hllovw-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked="true"]+.e1duuirp2 {
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid="true"]+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid="true"]:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid="true"]+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
  margin-top: 2px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="true"
    class="e1duuirp0 e1g1zfwd0 cache-1hllovw-StyledText-variantStyles-StyledRadioContainer"
    for="radio-choice"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      aria-invalid="false"
      class="cache-1ihnbva-StyledRadio e1duuirp1"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
    <svg
      class="e1duuirp2 etwatq50 cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
    Choice
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when error 1`] = `
<DocumentFragment>
  .cache-1hllovw-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked="true"]+.e1duuirp2 {
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid="true"]+.e1duuirp2 {
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid="true"]:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid="true"]+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1hllovw-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-right: 8px;
  margin-top: 2px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon.cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

<label
    aria-disabled="false"
    class="e1duuirp0 e1g1zfwd0 cache-1hllovw-StyledText-variantStyles-StyledRadioContainer"
    for="radio-choice"
  >
    <input
      aria-checked="false"
      aria-invalid="true"
      class="cache-1ihnbva-StyledRadio e1duuirp1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
    <svg
      class="e1duuirp2 etwatq50 cache-cqyxsv-StyledIcon-sizeStyles-StyledIcon"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
    Choice
  </label>
</DocumentFragment>
`;
